# mkdocs-include-markdown-plugin

./: .bumpversion.cfg  .editorconfig  .gitattributes  .gitignore  .markdown-link-check.json  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .yamllint  .yamllint.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codecov.yml  lychee.toml  pyproject.toml  schema.json  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml  renovate.json5
.github/workflows/: ci.yml  pre-commit-autoupdate.yml  pre-commit.yml  update-copyright-years-in-license-file.yml  update-copyright-years.yml  update-gh-actions.yml
examples/a-lot-of-includes/docs/: included.md  index.md
examples/a-lot-of-includes/docs/includes/: 00.md  01.md  02.md  03.md
examples/basic/docs/: included.md  index.md
examples/custom-tags/: mkdocs.yml
examples/custom-tags/docs/: included.md  index.md
examples/escaped-comments/docs/: inc-->luded.md  index.md
examples/exclude-self/: mkdocs.yml
examples/exclude-self/docs/: README.md
examples/frontmatters/: mkdocs.yml
examples/frontmatters/docs/: bad-multimarkdown.md  bad-yaml.md  good-multimarkdown.md  good-yaml.md  index.md
examples/global-exclude/: mkdocs.yml
examples/global-exclude/docs/: index.md
examples/global-exclude/docs/api/: foo.md
examples/http-cache/: mkdocs.yml
examples/http-cache-dir/: mkdocs.yml
examples/http-cache-dir/docs/: README.md
examples/http-cache/docs/: README.md
examples/include-if-exists/docs/: included.md  index.md
examples/include-to-list-item/: included.md
examples/include-to-list-item/docs/: index.md
examples/internal-anchors/: mkdocs.yml  test.md
examples/internal-anchors/docs/: index.md
examples/long-line/docs/: index.md
examples/start-end-not-found-warning/: mkdocs.yml
examples/start-end-not-found-warning/docs/: index.md
examples/start-end-not-found-warnings/docs/: included.md  index.md
examples/table-as-list-item/docs/: index.md  table.md
locale/es/: README.md  README.md.po  readme.po
locale/fr/: README.md  README.md.po
mkdocs_include_markdown_plugin/: __init__.py  config.py  event.py  plugin.py  process.py
scripts/: update_translations.py
src/mkdocs_include_markdown_plugin/: __init__.py  cache.py  config.py  directive.py  event.py  files_watcher.py  logger.py  placeholders.py  plugin.py  process.py
tests/: conftest.py  test_arguments.py  test_config.py  test_encoding.py  test_examples.py  test_exclude.py  test_glob_include.py  test_include.py  test_include_markdown.py  test_multiple_includes.py  test_nested_includes.py  test_process.py  test_tags.py  testing_helpers.py  testing_utils.py
tests/test_integration/: test_cache.py  test_cache_integration.py  test_examples.py  test_include_from_url_setting.py  test_order_setting.py
tests/test_integration/test_on_serve/: included.md  mkdocs.yml
tests/test_integration/test_on_serve/docs/: index.md
tests/test_unit/: test_arguments.py  test_cache.py  test_config.py  test_encoding.py  test_exclude.py  test_glob_include.py  test_include.py  test_include_markdown.py  test_logging.py  test_nested_includes.py  test_order.py  test_process.py
