[metadata]
name = mkdocs_include_markdown_plugin
version = 2.7.2
description = Mkdocs Markdown includer plugin.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mondeja/mkdocs-include-markdown-plugin
author = Joe Rickerby
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Documentation
    Topic :: Software Development :: Documentation
    Topic :: Text Processing
    Topic :: Text Processing :: Markup :: Markdown
project_urls =
    Documentation=https://github.com/mondeja/mkdocs-include-markdown-plugin#documentation
    Source=https://github.com/mondeja/mkdocs-include-markdown-plugin
    Issue Tracker=https://github.com/mondeja/mkdocs-include-markdown-plugin/issues

[options]
packages = mkdocs_include_markdown_plugin
python_requires = >=3.6
include_package_data = True
zip_safe = False

[options.entry_points]
mkdocs.plugins =
    include-markdown = mkdocs_include_markdown_plugin.plugin:IncludeMarkdownPlugin

[options.extras_require]
dev =
    bump2version==1.0.1
    flake8==3.8.4
    flake8-implicit-str-concat==0.2.0
    flake8-print==4.0.0
    isort==5.6.4
    pre-commit==2.9.2
    pytest==6.1.2
    pytest-cov==2.10.1
    pyupgrade==2.9.0
    yamllint==1.25.0
test =
    pytest==6.1.2
    pytest-cov==2.10.1

[coverage:run]
omit = mkdocs_include_markdown_plugin/plugin.py

[coverage:report]
exclude_lines =
    pragma: no cover

[isort]
lines_after_imports = 2
multi_line_output = 3
line_length = 79
use_parentheses = True
combine_as_imports = True
include_trailing_comma = True
known_tests = tests
sections = STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER
